@@ -190,12 +190,7 @@ namespace MonoDevelop.Projects.Dom.Output
 		}
 		
 		public abstract string SingleLineComment (string text);
-		public abstract string GetString (string nameSpace, OutputSettings settings);
-		
-		public string GetString (IDomVisitable domVisitable, OutputFlags flags)
-		{
-			return GetString (domVisitable, new OutputSettings (flags));
-		}
+		public abstract string GetString (string nameSpace, object settings);
 		
 		public string GetString (IDomVisitable domVisitable, object settings)
 		{
