@@ -1,6 +1,12 @@
 2008-11-28  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
+	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs: Taken back last
+	change.
+
+2008-11-28  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom.Output/Ambience.cs:
 	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs: added strongly typed
 	overloads for getstring.
 
